Marker window styling and fixing graph cutoff

--- a/src/webtsainterface/static/css/style.css
+++ b/src/webtsainterface/static/css/style.css
@@ -33,8 +33,12 @@
 }
 
 .focus .marker-circle {
-  fill: none;
-  stroke: steelblue;
+    fill: none;
+    stroke: steelblue;
+}
+
+.marker {
+
 }
 
 .clearfix:after {
